# AdS_CFT

./: PhaseShift_IXb_pre‑update.py  README.md  analysis_tools.py  bulk_existence_proof_colab.py  lambda3_ladder_tebd.py  lambda_mpo_tebd.py  phaseshift_X_complete.py  phaseshift_X_multiseed.py  photo_Induced.py  pyproject.toml  run_experiments.py
Automaton/: Advanced_Prototype.py
automata/: Prototype.py  soc_model.py
experiments/: phaseshift_9.py  phaseshift_9c.py
lambda3_holo/: automaton.py  config.py  geometry.py  metrics.py  plotters.py  rng_utils.py  run_experiment.py
play_zone/: flc_experiment.py  quantum_entanglement.py
scripts/: run_ixb.py  run_ixc.py  run_sweep.py
src/: core.py
tests/: test_geometry.py  test_metrics.py  test_smoke.py
toolkit/: bootstrap.py  scale_invariance.py
