[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda3-holo"
version = "0.1.0"
description = "Causal AdS/CFT–aware Self-Evolving Automaton with Geodesic Gating and Multi-objective RT functional"
authors = [{ name = "Masamichi iizumi", email = "iizumimasamichi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6"
]

[project.urls]
Homepage = "https://www.miosync.link/"
Repository = "https://zenodo.org/records/17506699"
